dark mode toggle successfully fixed

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,3 @@
 .font-poppins {
   font-family: "Poppins", sans-serif;
 }
-
-body,
-html,
-.text {
-  color: var(--text-base-content);
-}
